@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.10
 
+	- Fixed glibc 2.10 compiler problems (Fedora 11 and others)
+	  with scandir() and strchr() (STR #2222)
 	- Fixed OpenGL shared context handling (STR #2135)
 	- Fixed gray-scale images with alpha channel (STR #2105)
 	- Fixed unexpected shortcut behavior for Win32 (STR #2199)
